Try out new Travis Trusty environment on GCE
Signed-off-by: Nick Semenkovich <semenko@alum.mit.edu>

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,8 @@ before_script:
   - mv chromedriver test/chromium/chromedriver
 script:
   - ./test.sh
-sudo: false
+sudo: required
+dist: trusty
 notifications:
   email:
     recipients:
