Explicitly add libxml2-utils for xmllint
Signed-off-by: Nick Semenkovich <semenko@alum.mit.edu>

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ addons:
   apt:
     packages:
       - libxml2-dev
+      - libxml2-utils
       - python-dev
       - libcurl4-openssl-dev
       - python-lxml
