--- a/chromium/manifest.json
+++ b/chromium/manifest.json
@@ -1,7 +1,7 @@
 {
     "author": {
         "email": "eff.software.projects@gmail.com"
-    }, 
+    },
     "background": {
         "scripts": [
             "rules.js", 
@@ -9,35 +9,35 @@
             "background.js",
             "incognito-cache-clearing.js"
         ]
-    }, 
+    },
     "browser_action": {
         "default_icon": {
-            "38": "icon38.png"
-        }, 
-        "default_popup": "popup.html", 
+          "38": "icons/icon-active-38.png"
+        },
+        "default_popup": "popup.html",
         "default_title": "__MSG_about_ext_name__"
-    }, 
-    "default_locale": "en", 
-    "description": "__MSG_about_ext_description__", 
-    "devtools_page": "devtools.html", 
-    "homepage_url": "https://www.eff.org/https-everywhere", 
+    },
+    "default_locale": "en",
+    "description": "__MSG_about_ext_description__",
+    "devtools_page": "devtools.html",
+    "homepage_url": "https://www.eff.org/https-everywhere",
     "icons": {
-        "128": "icon128.png", 
-        "16": "icon16.png", 
-        "48": "icon48.png"
-    }, 
-    "incognito": "spanning",
-    "manifest_version": 2, 
+        "48": "icons/icon-active-48.png",
+        "128": "icons/icon-active-128.png"
+    },
+    "incognito": "split",
+    "manifest_version": 2,
     "minimum_chrome_version": "45",
-    "name": "__MSG_about_ext_name__", 
+    "name": "__MSG_about_ext_name__",
     "permissions": [
-        "webRequest", 
-        "webRequestBlocking", 
-        "tabs", 
-        "cookies", 
-        "storage", 
+        "webNavigation",
+        "webRequest",
+        "webRequestBlocking",
+        "tabs",
+        "cookies",
+        "storage",
         "<all_urls>"
-    ], 
-    "update_url": "https://www.eff.org/files/https-everywhere-chrome-updates.xml", 
+    ],
+    "update_url": "https://www.eff.org/files/https-everywhere-chrome-updates.xml",
     "version": "2015.12.16"
 }
