--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,7 @@ env:
   - FIREFOX_VERSION=firefox-esr-latest
 before_script:
   - sh -e /etc/init.d/xvfb start
-  - wget https://chromedriver.storage.googleapis.com/2.20/chromedriver_linux64.zip
-  - unzip chromedriver_linux64.zip
-  - mv chromedriver test/chromium/chromedriver
+  - sudo apt-get install chromium-chromedriver
   - wget -O /tmp/firefox.tar.bz2 'https://download.mozilla.org/?os=linux64&lang=en-US&product='$FIREFOX_VERSION
   - tar xpjf /tmp/firefox.tar.bz2
   - export DISPLAY=:99.0 FIREFOX=$PWD/firefox/firefox
