Move test from git hook to Travis
Following jsha's suggestion in https://github.com/EFForg/https-everywhere/pull/3107#issuecomment-165623578, this removes the pre-commit test from the developer installation script, but adds it instead to Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ before_script:
   - mv chromedriver test/chromium/chromedriver
 script:
   - ./test.sh
+  - test/commit.sh
 sudo: false
 notifications:
   email:
