Make ruleset fetch test Travis specific
This renames the pre-commit test to reflect that it is now Travis specific; rather than the contents of the previous commit, this checks the current branch against the EFForg GitHub repository master branch.

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ before_script:
   - mv chromedriver test/chromium/chromedriver
 script:
   - ./test.sh
-  - test/commit.sh
+  - test/travis-ruleset-fetch.sh
 sudo: false
 notifications:
   email:
