--- a/chromium/manifest.json
+++ b/chromium/manifest.json
@@ -6,7 +6,8 @@
         "scripts": [
             "rules.js", 
             "util.js", 
-            "background.js"
+            "background.js",
+            "incognito-cache-clearing.js"
         ]
     }, 
     "browser_action": {
@@ -25,7 +26,7 @@
         "16": "icon16.png", 
         "48": "icon48.png"
     }, 
-    "incognito": "split", 
+    "incognito": "spanning",
     "manifest_version": 2, 
     "minimum_chrome_version": "45",
     "name": "__MSG_about_ext_name__", 
