Restore spanning incognito mode.

--- a/chromium/manifest.json
+++ b/chromium/manifest.json
@@ -25,7 +25,7 @@
         "48": "icons/icon-active-48.png",
         "128": "icons/icon-active-128.png"
     },
-    "incognito": "split",
+    "incognito": "spanning",
     "manifest_version": 2,
     "minimum_chrome_version": "45",
     "name": "__MSG_about_ext_name__",
