new ruleset for letterboxd, fixes #3180

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ chromium.pem
 dummy-chromium.pem
 pkg/
 src/chrome/content/rules/default.rulesets
+src/chrome/content/rulesets.json
 src/defaults/rulesets.sqlite
 *.swp
 tokenkeys.py*
