Add tests against non-match groups being used in replacements (resolves #4327)

--- a/test/rules/coverage.checker.config
+++ b/test/rules/coverage.checker.config
@@ -4,6 +4,7 @@
 [rulesets]
 rulesdir = src/chrome/content/rules
 check_coverage = true
+check_nonmatch_groups = true
 include_default_off = false
 skiplist = utils/ruleset-coverage-whitelist.txt
 
