--- a/rewriter/package.json
+++ b/rewriter/package.json
@@ -1,10 +1,10 @@
 {
-  "name" : "https-everywhere-rewriter",
-  "version" : "1.0.0",
-  "dependencies" : {
-    "xmldom" : "0.1.17",
-    "URIjs" : "1.11.2",
-    "readdirp" : "0.3.2",
-    "event-stream" : "3.0.20"
+  "name": "https-everywhere-rewriter",
+  "version": "1.1.0",
+  "dependencies": {
+    "URIjs": "*",
+    "event-stream": "^3.3.2",
+    "readdirp": "^2.0.0",
+    "xmldom": "^0.1.22"
   }
 }
