Disable travis ruelset fetch for now (per https://github.com/EFForg/https-everywhere/issues/4645#issuecomment-213574802)

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,6 @@ before_script:
   - export FIREFOX=$PWD/firefox/firefox
 script:
   - ./test.sh
-  - test/travis-ruleset-fetch.sh
+  - # test/travis-ruleset-fetch.sh
 sudo: required
 dist: trusty
