Add test url formatting to https_everywhere_checker tests

--- a/test/rules/http.checker.config
+++ b/test/rules/http.checker.config
@@ -4,6 +4,8 @@
 # Directory with XML files describing HTTPS Everywhere rulesets
 rulesdir = src/chrome/content/rules
 check_coverage = false
+check_nonmatch_groups = false
+check_test_formatting = false
 auto_disable = false
 include_default_off = false
 
