--- a/test/rules/coverage.checker.config
+++ b/test/rules/coverage.checker.config
@@ -5,6 +5,7 @@
 rulesdir = src/chrome/content/rules
 check_coverage = true
 check_nonmatch_groups = true
+check_test_formatting = true
 include_default_off = false
 skiplist = utils/ruleset-coverage-whitelist.txt
 
